menu deroulant (css a changer)

--- a/accueil.html
+++ b/accueil.html
@@ -11,51 +11,47 @@
 
 <body>
 
-    <nav>
-        <ul>
-            <li class="deroulant"><a>Accueil</a>
-                <ul class="sous">
-                    <li><a href="https://www.youtube.com/watch?v=oavMtUWDBTM">aa</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=oavMtUWDBTM">bb</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=oavMtUWDBTM">cc</a></li>
+    <header>
 
-                </ul>
-            </li>
+        <nav class="nav">
+            <ul>
+                <li><a>Accueil</a>
+                    <ul class="sous">
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">aa</a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">bb</a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">cc</a></li>
 
-            <li class="deroulant"><a>En Attente</a>
-                <ul class="sous">
-                    <li><a href="https://www.youtube.com/watch?v=oavMtUWDBTM">aa</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=oavMtUWDBTM">bb</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=oavMtUWDBTM">cc</a></li>
+                    </ul>
+                </li>
 
-                </ul>
-            </li>
+                <li><a>En Attente</a>
+                    <ul class="sous">
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">aa</a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">bb</a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">cc</a></li>
 
-            <li class="deroulant"><a>En Attente</a>
-                <ul class="sous">
-                    <li><a href="https://www.youtube.com/watch?v=oavMtUWDBTM">aa</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=oavMtUWDBTM">bb</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=oavMtUWDBTM">cc</a></li>
+                    </ul>
+                </li>
 
-                </ul>
-            </li>
+                <li><a>En Attente</a>
+                    <ul class="sous">
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">aa</a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">bb</a></li>
+                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">cc</a></li>
 
-        </ul>
+                    </ul>
+                </li>
 
-    </nav>
+            </ul>
 
-    <section>
-        <p>texte du section</p>
+        </nav>
+    </header>
+
+    <section class="nav">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis!</p>
     </section>
-
 
 </body>
 
-<div class="footer">
-    <footer>
-        <p>texte du footer</p>
-
-    </footer>
-</div>
 
 </html>
