--- a/accueil.html
+++ b/accueil.html
@@ -13,42 +13,72 @@
 
     <header>
 
-        <nav class="nav">
-            <ul>
-                <li><a>Accueil</a>
-                    <ul class="sous">
-                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">aa</a></li>
-                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">bb</a></li>
-                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">cc</a></li>
+        <!-- <div class="bandeauTop">
+            <a>num tel : 06 00 00 00 00 |</a>
+            <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w"><span>nous contacté</span></a>
+        </div>-->
 
-                    </ul>
-                </li>
 
-                <li><a>En Attente</a>
-                    <ul class="sous">
-                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">aa</a></li>
-                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">bb</a></li>
-                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">cc</a></li>
+        <div class="navbar">
 
-                    </ul>
-                </li>
+            <img class="logo" src="img/logo.png">
 
-                <li><a>En Attente</a>
-                    <ul class="sous">
-                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">aa</a></li>
-                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">bb</a></li>
-                        <li><a target="_blank" href="https://www.youtube.com/watch?v=oavMtUWDBTM">cc</a></li>
+            <div class="dropdown">
+                <button class="dropbtn">En Attente
+                    <i class="fa fa-caret-down"></i>
+                  </button>
+                <div class="dropdown-content">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                </div>
+            </div>
 
-                    </ul>
-                </li>
+            <div class="dropdown">
+                <button class="dropbtn">En Attente 
+                      <i class="fa fa-caret-down"></i>
+                    </button>
+                <div class="dropdown-content">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                </div>
+            </div>
 
-            </ul>
+            <div class="dropdown">
+                <button class="dropbtn">Accueil 
+                    <i class="fa fa-caret-down"></i>
+                  </button>
+                <div class="dropdown-content">
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
+                </div>
+            </div>
+        </div>
 
-        </nav>
+
+
     </header>
 
     <section class="nav">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+            aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur
+            distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio
+            dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt
+            possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus
+            quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet,
+            dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores
+            incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt
+            praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium
+            iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod
+            quos tenetur neque accusamus repellat sed explicabo at. Officiis!
+
+        </p>
     </section>
 
 </body>
