--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 </head>
 
 <body> 
-    <div class="card"><p class="test">Diagnostic des installations <img src="Image/IMG_E7116.jpeg" class="main"> <img src="Image/IMG_7078.jpeg" class="main2"> <img src="Image/IMG_7104 bis.jpeg" class="main3"> </p></div>
+    <div class="flex"><div class="card"><img src="Image/IMG_E7116.jpeg" class="main"> <img src="Image/IMG_7078.jpeg" class="main2"> <img src="Image/IMG_7104 bis.jpeg" class="main3"></div></div>
 </body>
 
 <footer>
