--- a/accueil.html
+++ b/accueil.html
@@ -94,6 +94,7 @@
             quos tenetur neque accusamus repellat sed explicabo at. Officiis!
 
         </p>
+        <div class="flex"><div class="card"><img src="Image/IMG_E7116.jpeg" class="main"> <img src="Image/IMG_7078.jpeg" class="main2"> <img src="Image/IMG_7104 bis.jpeg" class="main3"></div></div>
     </section>
 
 </body>
