--- a/accueil.html
+++ b/accueil.html
@@ -22,13 +22,15 @@
 
         <div class="navbar">
 
-            <img class="logo" src="img/logo.png">
+
+            <a href="accueil.html"><img class="logo" src="img/logo.png" /></a>
+
 
             <div class="dropdown">
                 <button class="dropbtn">En Attente
                     <i class="fa fa-caret-down"></i>
                   </button>
-                <div class="dropdown-content">
+                <div class="dropdown-content1">
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
@@ -39,7 +41,7 @@
                 <button class="dropbtn">En Attente 
                       <i class="fa fa-caret-down"></i>
                     </button>
-                <div class="dropdown-content">
+                <div class="dropdown-content2">
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
@@ -50,7 +52,7 @@
                 <button class="dropbtn">Accueil 
                     <i class="fa fa-caret-down"></i>
                   </button>
-                <div class="dropdown-content">
+                <div class="dropdown-content3">
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
@@ -65,8 +67,7 @@
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p>
-            Servithen, industrie française, <br>
-            30 ans de savoir faire.  <br>
+                Servithen, industrie française, <br> 30 ans de savoir faire. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
@@ -74,7 +75,7 @@
                 Ingénierie, audit et assistance à la maitrise d'ouvrage.
             </p>
         </div>
-</div>
+    </div>
 
     <section class="nav">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum
