Animation et section

--- a/accueil.html
+++ b/accueil.html
@@ -75,30 +75,35 @@
                 Ingénierie, audit et assistance à la maitrise d'ouvrage.
             </p>
         </div>
-    </div>
-
+</div>
+    <img src="img/Fondu.png" class="transition">
+    <div class="page"></div>
     <section class="nav">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum
-            dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
-            aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur
-            distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio
-            dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt
-            possimus quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus
-            quas eveniet, dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet,
-            dolores incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores
-            incidunt praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt
-            praesentium iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium
-            iusto quod quos tenetur neque accusamus repellat sed explicabo at. Officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, aspernatur distinctio dicta deserunt possimus quas eveniet, dolores incidunt praesentium iusto quod
-            quos tenetur neque accusamus repellat sed explicabo at. Officiis!
-
-        </p>
-        <div class="flex"><div class="card"><img src="Image/IMG_E7116.jpeg" class="main"> <img src="Image/IMG_7078.jpeg" class="main2"> <img src="Image/IMG_7104 bis.jpeg" class="main3"></div></div>
+        <div class="fond">
+            <h3>Activité</h3>
+            <div class="déco"><div class="sphère"></div><div class="transmission"></div><div class="barre"></div><div class="sphère"></div></div>
+            <p>Basée en Ile-de-France et au Maroc, SERVITHEN est une société qui propose des services dans le domaine de lavage des gaz en tant que Maître d’œuvre (MOE) et Maître d’ouvrage (MO) pour examiner vos équipements de près et prolonger leurs durées de vie tout en s’adaptant à vos besoins.</p>
+            <div class="flex">
+                <div class="hover"><div class="card2"><p class="description">Diagnostic d'installation</p><img src="img/IMG_E7116.jpeg" class="left"> <img src="img/IMG_7078.jpeg" class="right"> <img src="img/IMG_7104 bis.jpeg" class="middle"></div></div>
+                <div class="hover"><div class="card2"><p class="description">Remise aux normes</p><img src="img/20220310_152209869_iOS.jpeg" class="right"> <img src="img/20220310_152203741_iOS.jpeg" class="middle"></div></div>
+            </div>
+            <div class="flex">
+                <div class="hover"><div class="card2"><p class="description">Etude de projet</p><img src="img/Gaine 2701 assemblage 2.png" class="left"> <img src="img/Capture 2910 3.png" class="right"> <img src="img/Capture 2701 3d.png" class="middle"></div></div>
+                <div class="hover"><div class="card2"><p class="description">Installation complète</p><img src="img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left"> <img src="img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right"> <img src="img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg" class="middle"></div></div>
+            </div>
+        </div>
     </section>
-
+    <footer>
+        <div>
+        <p>Coordonné</p>
+        <p>- +33 (0) 1 34 89 71 46</p>
+        <p>- info@servithen.fr</p>
+        <p>Société SERVITHEN</p>
+        <p>Adresse siège :</p>
+    
+        <p>8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</p>
+        </div>
+    </footer>
 </body>
-
 
 </html>
