--- a/accueil.html
+++ b/accueil.html
@@ -85,7 +85,7 @@
             <p>Basée en Ile-de-France et au Maroc, SERVITHEN est une société qui propose des services dans le domaine de lavage des gaz en tant que Maître d’œuvre (MOE) et Maître d’ouvrage (MO) pour examiner vos équipements de près et prolonger leurs durées de vie tout en s’adaptant à vos besoins.</p>
             <div class="flex">
                 <div class="hover"><div class="card2"><p class="description">Diagnostic d'installation</p><img src="img/IMG_E7116.jpeg" class="left"> <img src="img/IMG_7078.jpeg" class="right"> <img src="img/IMG_7104 bis.jpeg" class="middle"></div></div>
-                <div class="hover"><div class="card2"><p class="description">Remise aux normes</p><img src="img/20220310_152209869_iOS.jpeg" class="right"> <img src="img/20220310_152203741_iOS.jpeg" class="middle"></div></div>
+                <div class="hover"><div class="card2"><p class="description">Remise aux normes</p><img src="img/20220310_152203741_iOS.jpeg" class="left"><img src="img/20220310_152209869_iOS.jpeg" class="right"> <img src="img/Norme.png" class="middle"></div></div>
             </div>
             <div class="flex">
                 <div class="hover"><div class="card2"><p class="description">Etude de projet</p><img src="img/Gaine 2701 assemblage 2.png" class="left"> <img src="img/Capture 2910 3.png" class="right"> <img src="img/Capture 2701 3d.png" class="middle"></div></div>
