--- a/accueil.html
+++ b/accueil.html
@@ -80,7 +80,7 @@
     <div class="page"></div>
     <section class="nav">
         <div class="fond">
-            <h3>Activité</h3>
+            <h3>Notre activité</h3>
             <div class="déco"><div class="sphère"></div><div class="transmission"></div><div class="barre"></div><div class="sphère"></div></div>
             <p>Basée en Ile-de-France et au Maroc, SERVITHEN est une société qui propose des services dans le domaine de lavage des gaz en tant que Maître d’œuvre (MOE) et Maître d’ouvrage (MO) pour examiner vos équipements de près et prolonger leurs durées de vie tout en s’adaptant à vos besoins.</p>
             <div class="flex">
@@ -95,7 +95,8 @@
     </section>
 
     <div class="container2">
-        <h3 class="text-center2 font-weight-bold2">nos partenaires :</h3>
+        <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
+        <div class="déco"><div class="sphère"></div><div class="transmission"></div><div class="barre"></div><div class="sphère"></div></div>
         <section class="customer-logos2 slider2">
             <div class="slide2"><img src="img/partenaire/lechler_logo_juin19.png"></div>
             <div class="slide2"><img src="img/partenaire/logo-neu-process.png"></div>
@@ -128,13 +129,13 @@
 
     <footer>
         <div>
-        <p>Coordonné</p>
-        <p>- +33 (0) 1 34 89 71 46</p>
-        <p>- info@servithen.fr</p>
-        <p>Société SERVITHEN</p>
-        <p>Adresse siège :</p>
+        <h4>Coordonné</h4>
+        <p class="footerp">- +33 (0) 1 34 89 71 46</p>
+        <p class="footerp">- info@servithen.fr</p>
+        <a target="_blank" href="https://www.linkedin.com/company/servithen/">-Linkedin : Société SERVITHEN</a>
+        <h4>Adresse siège :</h3>
     
-        <p>8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</p>
+        <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
         </div>
     </footer>
 </body>
