--- a/accueil.html
+++ b/accueil.html
@@ -130,8 +130,8 @@
     <footer>
         <div>
         <h4>Coordonné</h4>
-        <p class="footerp">- +33 (0) 1 34 89 71 46</p>
-        <p class="footerp">- info@servithen.fr</p>
+        <p class="footerp">-Téléphone: +33 (0) 1 34 89 71 46</p>
+        <p class="footerp">-Mail : info@servithen.fr</p>
         <a target="_blank" href="https://www.linkedin.com/company/servithen/">-Linkedin : Société SERVITHEN</a>
         <h4>Adresse siège :</h3>
     
