--- a/modif accueil.html
+++ b/modif accueil.html
@@ -23,18 +23,14 @@
             
 
             <a href="accueil.html"><img class="logo" src="img/logo.png" /></a>
-            <!--
-            <a href="accueil.html"><img class="langage" src="img/drapeau/france-flag-png-large.png" /></a>
 
-            <a href="#"><img class="langage" src="img/drapeau/united-kingdom-flag-png-large.png" /></a>
 
--->
             <div class="dropdown">
                 <button class="dropbtn">En Attente
                     <i class="fa fa-caret-down"></i>
                   </button>
                 <div class="dropdown-content1">
-                    <a  href="form.html">Nous contacter</a>
+                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 1</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
@@ -69,60 +65,35 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p id="txtTitre">
-                Servithen, industrie française, <br> 30 ans de savoir faire. <br>
-            </p>
+            <textarea id="txtTitre">
+            </textarea>
         </div>
         <div id="soustxtAccueil">
-            <p id="stxtTitre">
-                Ingénierie, audit et assistance à la maitrise d'ouvrage.
-            </p>
+            <textarea id="stxtTitre">
+            </textarea>
         </div>
-    </div>
+</div>
     <img src="img/Fondu.png" class="transition">
     <div class="page"></div>
-</div>
     <section class="nav">
         <div class="fond">
             <h3>Notre activité</h3>
-            <div class="déco">
-                <div class="sphère"></div>
-                <div class="transmission"></div>
-                <div class="barre"></div>
-                <div class="sphère"></div>
-            </div>
-            <p id="DescActi"></p>
+            <div class="déco"><div class="sphère"></div><div class="transmission"></div><div class="barre"></div><div class="sphère"></div></div>
+            <textarea id="DescActi"></textarea>
             <div class="flex">
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Diagnostic d'installation</p><img src="img/IMG_E7116.jpeg" class="left"> <img src="img/IMG_7078.jpeg" class="right"> <img src="img/IMG_7104 bis.jpeg" class="middle"></div>
-                </div>
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Remise aux normes</p><img src="img/20220310_152203741_iOS.jpeg" class="left"><img src="img/20220310_152209869_iOS.jpeg" class="right"> <img src="img/Norme.png" class="middle"></div>
-                </div>
+                <div class="hover"><div class="card2"><p class="description">Diagnostic d'installation</p><img src="img/IMG_E7116.jpeg" class="left"> <img src="img/IMG_7078.jpeg" class="right"> <img src="img/IMG_7104 bis.jpeg" class="middle"></div></div>
+                <div class="hover"><div class="card2"><p class="description">Remise aux normes</p><img src="img/20220310_152203741_iOS.jpeg" class="left"><img src="img/20220310_152209869_iOS.jpeg" class="right"> <img src="img/Norme.png" class="middle"></div></div>
             </div>
             <div class="flex">
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Etude de projet</p><img src="img/Gaine 2701 assemblage 2.png" class="left"> <img src="img/Capture 2910 3.png" class="right"> <img src="img/Capture 2701 3d.png" class="middle"></div>
-                </div>
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Installation complète</p><img src="img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left"> <img src="img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right"> <img src="img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg" class="middle"></div>
-                </div>
+                <div class="hover"><div class="card2"><p class="description">Etude de projet</p><img src="img/Gaine 2701 assemblage 2.png" class="left"> <img src="img/Capture 2910 3.png" class="right"> <img src="img/Capture 2701 3d.png" class="middle"></div></div>
+                <div class="hover"><div class="card2"><p class="description">Installation complète</p><img src="img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left"> <img src="img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right"> <img src="img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg" class="middle"></div></div>
             </div>
         </div>
     </section>
 
     <div class="container2">
         <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
-        <div class="déco">
-            <div class="sphère"></div>
-            <div class="transmission"></div>
-            <div class="barre"></div>
-            <div class="sphère"></div>
-        </div>
+        <div class="déco"><div class="sphère"></div><div class="transmission"></div><div class="barre"></div><div class="sphère"></div></div>
         <section class="customer-logos2 slider2">
             <div class="slide2"><img src="img/partenaire/lechler_logo_juin19.png"></div>
             <div class="slide2"><img src="img/partenaire/logo-neu-process.png"></div>
@@ -140,6 +111,7 @@
             <div class="slide"><img src="img/LogoConfiance/guerbet.png"></div>
             <div class="slide"><img src="img/LogoConfiance/logo-constellium.png"></div>
             <div class="slide"><img class="TailleImg" src="img/LogoConfiance/logo-orange.png"></div>
+            <div class="slide"><img src="img/LogoConfiance/logo-sanofi.png"></div>
             <div class="slide"><img src="img/LogoConfiance/Logo-Veolia.png"></div>
             <div class="slide"><img src="img/LogoConfiance/ocp.png"></div>
             <div class="slide"><img src="img/LogoConfiance/orano-logo.png"></div>
@@ -154,24 +126,13 @@
 
     <footer>
         <div>
-            <h4>Coordonné</h4>
-            <p>
-                <br> -Téléphone :
-                <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
-                <br>
-                <br>-Mail :
-                <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
-                <br>
-                <br>-Linkedin :
-                <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
-
-            </p>
-
-
-
-            <h4>Adresse siège :</h3>
-
-                <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
+        <h4>Coordonné</h4>
+        <p class="footerp">-Téléphone: +33 (0) 1 34 89 71 46</p>
+        <p class="footerp">-Mail : info@servithen.fr</p>
+        <a target="_blank" href="https://www.linkedin.com/company/servithen/">-Linkedin : Société SERVITHEN</a>
+        <h4>Adresse siège :</h3>
+    
+        <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
         </div>
     </footer>
 </body>
