correction image de fond (accueil)

--- a/form.html
+++ b/form.html
@@ -71,7 +71,7 @@
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p>
-                Contactez-Nous ou demandez votre devis.
+                Contactez-Nous.
             </p>
         </div>
       
