--- a/servithenEN/htmlEN/formEN.html
+++ b/servithenEN/htmlEN/formEN.html
@@ -71,7 +71,7 @@
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p>
-
+                Contact Us.
             </p>
         </div>
 
