ajout de présentation en EN et FR

--- a/servithenFR/htmlFR/accueilFR.html
+++ b/servithenFR/htmlFR/accueilFR.html
@@ -58,7 +58,7 @@
                   </button>
                 <div class="dropdown-content3">
                     <a href="/servithenFR/htmlFR/accueilFR.html">Accueil</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                    <a href="/servithenFR/htmlFR/presentationFR.html">Présentation</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <p>Basée en Ile-de-France et au Maroc, SERVITHEN est une société qui propose des services dans le domaine de lavage des gaz en tant que Maître d’œuvre (MOE) et Maître d’ouvrage (MO) pour examiner vos équipements de près et prolonger leurs durées
+            <p class="textphoto">Basée en Ile-de-France et au Maroc, SERVITHEN est une société qui propose des services dans le domaine de lavage des gaz en tant que Maître d’œuvre (MOE) et Maître d’ouvrage (MO) pour examiner vos équipements de près et prolonger leurs durées
                 de vie tout en s’adaptant à vos besoins.</p>
             <div class="flex">
                 <div class="hover">
