--- a/servithenFR/htmlFR/formFR.html
+++ b/servithenFR/htmlFR/formFR.html
@@ -64,7 +64,7 @@
                   </button>
                 <div class="dropdown-content3">
                     <a href="/servithenFR/htmlFR/accueilFR.html">Accueil</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                    <a href="/servithenFR/htmlFR/presentationFR.html">Présentation</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
