--- a/servithenEN/htmlEN/formEN.html
+++ b/servithenEN/htmlEN/formEN.html
@@ -58,7 +58,7 @@
                   </button>
                 <div class="dropdown-content3">
                     <a href="/servithenEN/htmlEN/accueilEN.html">Home</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                    <a href="/servithenEN/htmlEN/presentationEN.html">Presentation</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
@@ -124,7 +124,7 @@
     </div>
 
     <div class="container2">
-        <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
+        <h3 class="text-center2 font-weight-bold2">Our partners :</h3>
         <div class="déco">
             <div class="sphère"></div>
             <div class="transmission"></div>
@@ -142,7 +142,7 @@
 
 
     <div class="container">
-        <h2 class="text-center font-weight-bold">nous font confiance :</h2>
+        <h2 class="text-center font-weight-bold">trust us :</h2>
         <section class="customer-logos slider">
             <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
             <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
