--- a/servithenEN/htmlEN/presentationEN.html
+++ b/servithenEN/htmlEN/presentationEN.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
-    <link rel="shortcut icon" href="/img/Logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Logo.png" type="/image/x-icon">
     <link rel="stylesheet" href="/servithenEN/cssEN/accueilEN.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
@@ -18,16 +18,16 @@
 
     <header>
 
-        <!-- La bar navigation      -->
+        <!-- La bar navigation   -->
 
         <div class="navbar">
 
 
             <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logo.png" /></a>
 
-            <a href="/servithenFR/htmlFR/accueilFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
+            <a href="/servithenFR/htmlFR/presentationFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
 
-            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
+            <a href="/servithenEN/htmlEN/presentationEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
 
 
             <div class="dropdown">
@@ -57,7 +57,7 @@
                     <i class="fa fa-caret-down"></i>
                   </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN/accueilEN.html">Home</a>
+                    <a href="/servithenEN/htmlEN/accueilEN.html">Accueil</a>
                     <a href="/servithenEN/htmlEN/presentationEN.html">Presentation</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
@@ -70,50 +70,42 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p>
-                Servithen, french industry, <br> 30 years of know-how. <br>
+            <p class="pTitre">
+                Servithen, French industry, <br> 30 years of know-how. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p>
+            <p class="pTitre">
                 Engineering, audit and project management assistance.
             </p>
         </div>
+
     </div>
     <img src="/img/Fondu.png" class="transition">
     <div class="page"></div>
     <section class="nav">
-        <div class="fond">
-            <h3>Our activity</h3>
+        <div class="fond2">
+            <h3>Presentation</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <p class="textphoto">Based in Ile-de-France and Morocco, SERVITHEN is a company that offers services in the field of gas cleaning as Project Manager (MOE) and Project Owner (MO) to closely examine your equipment and extend their duration lifestyle while adapting
-                to your needs.</p>
-            <div class="flex">
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Installation diagnosis</p><img src="/img/IMG_E7116.jpeg" class="left"> <img src="/img/IMG_7078.jpeg" class="right"> <img src="/img/IMG_7104 bis.jpeg" class="middle"></div>
-                </div>
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Upgrading</p><img src="/img/20220310_152203741_iOS.jpeg" class="left"><img src="/img/20220310_152209869_iOS.jpeg" class="right"> <img src="/img/Norme.png" class="middle"></div>
-                </div>
-            </div>
-            <div class="flex">
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Project study</p><img src="/img/Gaine 2701 assemblage 2.png" class="left"> <img src="/img/Capture 2910 3.png" class="right"> <img src="/img/Capture 2701 3d.png" class="middle"></div>
-                </div>
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Complete installation</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right"> <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg"
-                            class="middle"></div>
-                </div>
-            </div>
+            <p class="presentation">The company Servithen (Services Thermique Environnement) was created in 1986. Mainly focused originally on the audit and compliance of existing thermal installations, it has extended its services to the installation of incineration and treatment
+                of fumes or gaseous effluents and the supply of specific equipment, or "turnkey" installations, with in particular:
+            </p>
+            <p class="presentation"> · Furnaces,<br><br> · Flue gas scrubbers for dust reduction and acid gas neutralization,<br><br> · Wet electrostatic filters allowing high dust collection efficiencies,<br><br> Units dry treatment of incineration fumes,<br><br> · Installations
+                for the treatment of volatile organic compounds (VOC), odors or deNOx treatment.
+            </p class="presentation">
+            <p class="presentation"> The SERVITHEN Company was awarded the Gazelle 2005 label by the Minister of SMEs, Trade, Crafts and Liberal Professions, Mr. Renaud DUTREIL. This trophy rewards 2,000 French companies out of 1.2 million SME. The gazelles selected are the SMEs
+                which grew during the period studied from 1993 to 2003, i.e. two or three times faster than those in the same sector of activity, i.e. those which are in the top 5 or 10% of their population in terms of of growth and which have a higher
+                profitability than that of their counterparts. The objective of this government program is to help maintain the rapid growth of these most dynamic SMEs. In particular, by mobilizing all the skills to enable them to support their growth,
+                in particular by enriching their relational network, and by giving them access to specific offers from partners, among other financiers</p>
+
+            <p class="texteGazelle">SERVITHEN Prix Gazelle 2005 :</p>
+            <img class="prixGazelle" src="/img/20220310_152203741_iOS.jpeg">
+
         </div>
     </section>
 
@@ -156,9 +148,9 @@
 
     <footer>
         <div>
-            <h4>Coordinated</h4>
+            <h4>Coordonné</h4>
             <p>
-                <br> -Telephone :
+                <br> -Téléphone :
                 <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
                 <br>
                 <br>-Mail :
@@ -171,7 +163,7 @@
 
 
 
-            <h4>Headquarters address :</h3>
+            <h4>Adresse siège :</h3>
 
                 <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
         </div>
