--- a/servithenFR/htmlFR/presentationFR.html
+++ b/servithenFR/htmlFR/presentationFR.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servithen</title>
-    <link rel="shortcut icon" href="/img/Logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="/servithenEN/cssEN/accueilEN.css">
+    <link rel="shortcut icon" href="/img/Logo.png" type="/image/x-icon">
+    <link rel="stylesheet" href="/servithenFR/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/servithenEN/jsEN/confianceEN.js"></script>
+    <script type="text/javascript" src="/servithenFR/jsFR/confianceFR.js"></script>
 
 </head>
 
@@ -23,26 +23,26 @@
         <div class="navbar">
 
 
-            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="logo" src="/img/logo.png" /></a>
+            <a href="/servithenFR/htmlFR/accueilFR.html"><img class="logo" src="/img/logo.png" /></a>
 
-            <a href="/servithenFR/htmlFR/accueilFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
+            <a href="/servithenFR/htmlFR/presentationFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" /></a>
 
-            <a href="/servithenEN/htmlEN/accueilEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
+            <a href="/servithenEN/htmlEN/presentationEN.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" /></a>
 
 
             <div class="dropdown">
-                <button class="dropbtn">Waiting
+                <button class="dropbtn">En Attente
                     <i class="fa fa-caret-down"></i>
                   </button>
                 <div class="dropdown-content1">
-                    <a href="/servithenEN/htmlEN/formEN.html">Contact us</a>
+                    <a href="/servithenFR/htmlFR/formFR.html">Nous contacter</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
 
             <div class="dropdown">
-                <button class="dropbtn">Waiting 
+                <button class="dropbtn">En Attente 
                       <i class="fa fa-caret-down"></i>
                     </button>
                 <div class="dropdown-content2">
@@ -53,12 +53,12 @@
             </div>
 
             <div class="dropdown">
-                <button class="dropbtn">Home 
+                <button class="dropbtn">Accueil 
                     <i class="fa fa-caret-down"></i>
                   </button>
                 <div class="dropdown-content3">
-                    <a href="/servithenEN/htmlEN/accueilEN.html">Home</a>
-                    <a href="/servithenEN/htmlEN/presentationEN.html">Presentation</a>
+                    <a href="/servithenFR/htmlFR/accueilFR.html">Accueil</a>
+                    <a href="/servithenFR/htmlFR/presentationFR.html">Présentation</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
@@ -70,55 +70,46 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p>
-                Servithen, french industry, <br> 30 years of know-how. <br>
+            <p class="pTitre">
+                Servithen, industrie française, <br> 30 ans de savoir faire. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p>
-                Engineering, audit and project management assistance.
+            <p class="pTitre">
+                Ingénierie, audit et assistance à la maitrise d'ouvrage.
             </p>
         </div>
+
     </div>
     <img src="/img/Fondu.png" class="transition">
     <div class="page"></div>
     <section class="nav">
-        <div class="fond">
-            <h3>Our activity</h3>
+        <div class="fond2">
+            <h3>Présentation</h3>
             <div class="déco">
                 <div class="sphère"></div>
                 <div class="transmission"></div>
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <p class="textphoto">Based in Ile-de-France and Morocco, SERVITHEN is a company that offers services in the field of gas cleaning as Project Manager (MOE) and Project Owner (MO) to closely examine your equipment and extend their duration lifestyle while adapting
-                to your needs.</p>
-            <div class="flex">
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Installation diagnosis</p><img src="/img/IMG_E7116.jpeg" class="left"> <img src="/img/IMG_7078.jpeg" class="right"> <img src="/img/IMG_7104 bis.jpeg" class="middle"></div>
-                </div>
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Upgrading</p><img src="/img/20220310_152203741_iOS.jpeg" class="left"><img src="/img/20220310_152209869_iOS.jpeg" class="right"> <img src="/img/Norme.png" class="middle"></div>
-                </div>
-            </div>
-            <div class="flex">
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Project study</p><img src="/img/Gaine 2701 assemblage 2.png" class="left"> <img src="/img/Capture 2910 3.png" class="right"> <img src="/img/Capture 2701 3d.png" class="middle"></div>
-                </div>
-                <div class="hover">
-                    <div class="card2">
-                        <p class="description">Complete installation</p><img src="/img//c0cc2127-d5d1-4551-a58b-f8810966ded9.jpeg" class="left"> <img src="/img/4173969b-65fc-4617-843d-711aa44b1d9e.jpeg" class="right"> <img src="/img/120e21a2-83cb-43ba-9fa4-f79532850dd7.jpeg"
-                            class="middle"></div>
-                </div>
-            </div>
+            <p class="presentation">La société Servithen (Services Thermique Environnement) a été créée en 1986. Principalement centrée à l'origine sur l'audit et la mise en conformité d'installations thermiques existantes elle a étendu ses prestations à l'installation de lignes
+                complètes d'incinération et de traitement de fumées ou d'effluents gazeux et à la fourniture d'équipements spécifiques, ou d'installations "clé-en-main", avec en particulier :
+            </p>
+            <p class="presentation"> · Des fours,<br><br> · Des laveurs de fumées pour l'abattement des poussières et la neutralisation des gaz acides,<br><br> · Des filtres électrostatiques humides permettant des rendements élevés de captation des poussières,<br><br> · Des unités
+                de traitement sec de fumées d'incinération,<br><br> · Des installations de traitement de composés organiques volatiles (COV), d'odeurs ou de traitement deNOx.
+            </p class="presentation">
+            <p class="presentation"> La Société SERVITHEN s’est vu décerner le label Gazelle 2005 par le ministre des PME, du commerce, de l’artisanat et des professions libérales, Monsieur Renaud DUTREIL. Ce trophée récompense 2.000 Entreprises françaises sur 1,2 millions de
+                PME. Les gazelles retenues sont les PME qui croissent pendant la période étudiée de 1993 à 2003, soit deux ou trois plus vite que celles du même secteur d’activité, soit celles qui sont dans le top 5 où 10 % de leur population en termes
+                de croissance et qui, ont une rentabilité supérieure à celle de leurs homologues. L’objectif de ce programme gouvernemental est de favoriser le maintien de la croissance rapide de ces PME les plus dynamiques. Notamment, en mobilisant toutes
+                les compétences pour leurs permettre de soutenir leur croissance, en particulier en enrichissant leur réseau relationnel, et en leur donnant accès à des offres spécifiques de partenaires, entre autres financiers</p>
+
+            <p class="texteGazelle">SERVITHEN Prix Gazelle 2005 :</p>
+            <img class="prixGazelle" src="/img/20220310_152203741_iOS.jpeg">
         </div>
     </section>
 
     <div class="container2">
-        <h3 class="text-center2 font-weight-bold2">Our partners :</h3>
+        <h3 class="text-center2 font-weight-bold2">Nos partenaires :</h3>
         <div class="déco">
             <div class="sphère"></div>
             <div class="transmission"></div>
@@ -136,7 +127,7 @@
 
 
     <div class="container">
-        <h2 class="text-center font-weight-bold">trust us :</h2>
+        <h2 class="text-center font-weight-bold">nous font confiance :</h2>
         <section class="customer-logos slider">
             <div class="slide"><img src="/img/LogoConfiance/artelia.png"></div>
             <div class="slide"><img src="/img/LogoConfiance/guerbet.png"></div>
@@ -156,9 +147,9 @@
 
     <footer>
         <div>
-            <h4>Coordinated</h4>
+            <h4>Coordonné</h4>
             <p>
-                <br> -Telephone :
+                <br> -Téléphone :
                 <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
                 <br>
                 <br>-Mail :
@@ -171,7 +162,7 @@
 
 
 
-            <h4>Headquarters address :</h3>
+            <h4>Adresse siège :</h3>
 
                 <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
         </div>
