ajout page appli

--- a/accueil.html
+++ b/accueil.html
@@ -36,7 +36,7 @@
                   </button>
                 <div class="dropdown-content1">
                     <a href="form.html">Nous contacter</a>
-                    <a target="_blank" href="appliMP.html">MyPartner</a>
+                    <a  href="appliMP.html">MyPartner</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
