--- a/form.html
+++ b/form.html
@@ -35,8 +35,8 @@
                     <i class="fa fa-caret-down"></i>
                   </button>
                 <div class="dropdown-content1">
-                    <a target="_blank" href="form.html">Nous Contacter</a>
-                    <a target="_blank" href="appliMP.html">MyPartner</a>
+                    <a  href="form.html">Nous Contacter</a>
+                    <a  href="appliMP.html">MyPartner</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
