--- a/accueil.html
+++ b/accueil.html
@@ -35,7 +35,7 @@
                   </button>
                 <div class="dropdown-content1">
                     <a href="form.html">Nous contacter</a>
-                    <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 2</a>
+                    <a target="_blank" href="http://127.0.0.1:12001/modif%20accueil.html">Link 2</a>
                     <a target="_blank" href="https://www.youtube.com/watch?v=XqZsoesa55w">Link 3</a>
                 </div>
             </div>
@@ -70,17 +70,15 @@
     <div id="infoAccueil">
         <div id="txtAccueil">
             <p id="txtTitre">
-                Servithen, industrie française, <br> 30 ans de savoir faire. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
             <p id="stxtTitre">
-                Ingénierie, audit et assistance à la maitrise d'ouvrage.
             </p>
         </div>
+        <img src="img/Fondu.png" class="transition">
+        <div class="page"></div>
     </div>
-    <img src="img/Fondu.png" class="transition">
-    <div class="page"></div>
 </div>
     <section class="nav">
         <div class="fond">
@@ -157,21 +155,16 @@
             <h4>Coordonné</h4>
             <p>
                 <br> -Téléphone :
-                <a href="Tel:+33134897146"> +33 (0) 1 34 89 71 46</a>
+                <a id="Telephone" target="_blank"> +33 (0) 1 34 89 71 46</a>
                 <br>
                 <br>-Mail :
-                <a class="footerp" href="mailto:info@servithen.fr">info@servithen.fr</a>
+                <a id="Mail" class="footerp" target="_blank">info@servithen.fr</a>
                 <br>
                 <br>-Linkedin :
-                <a target="_blank" class="footerp" class="footerp" href="https://www.linkedin.com/company/servithen/">Société SERVITHEN</a>
-
+                <a id="Linkedin" target="_blank" class="footerp">Société SERVITHEN</a>
             </p>
-
-
-
             <h4>Adresse siège :</h3>
-
-                <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
+                <a id="Local" target="_blank"></a>
         </div>
     </footer>
 </body>
