--- a/modif accueil.html
+++ b/modif accueil.html
@@ -14,16 +14,16 @@
 </head>
 
 <body>
-
+    <form method="post" action="modifaccueil.php">
     <header>
 
-        <!-- La bar navigation      -->
+        <!-- La bar navigation-->
 
         <div class="navbar">
             
 
             <a href="accueil.html"><img class="logo" src="img/logo.png" /></a>
-
+            <button>Confirmer les changements</button>
 
             <div class="dropdown">
                 <button class="dropbtn">En Attente
@@ -65,11 +65,11 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <textarea id="txtTitre">
+            <textarea name="Titre" id="txtTitre">
             </textarea>
         </div>
         <div id="soustxtAccueil">
-            <textarea id="stxtTitre">
+            <textarea name="SousTitre" id="stxtTitre">
             </textarea>
         </div>
 </div>
@@ -79,7 +79,7 @@
         <div class="fond">
             <h3>Notre activité</h3>
             <div class="déco"><div class="sphère"></div><div class="transmission"></div><div class="barre"></div><div class="sphère"></div></div>
-            <textarea id="DescActi"></textarea>
+            <textarea name="Activity" id="DescActi"></textarea>
             <div class="flex">
                 <div class="hover"><div class="card2"><p class="description">Diagnostic d'installation</p><img src="img/IMG_E7116.jpeg" class="left"> <img src="img/IMG_7078.jpeg" class="right"> <img src="img/IMG_7104 bis.jpeg" class="middle"></div></div>
                 <div class="hover"><div class="card2"><p class="description">Remise aux normes</p><img src="img/20220310_152203741_iOS.jpeg" class="left"><img src="img/20220310_152209869_iOS.jpeg" class="right"> <img src="img/Norme.png" class="middle"></div></div>
@@ -127,14 +127,18 @@
     <footer>
         <div>
         <h4>Coordonné</h4>
-        <p class="footerp">-Téléphone: +33 (0) 1 34 89 71 46</p>
-        <p class="footerp">-Mail : info@servithen.fr</p>
-        <a target="_blank" href="https://www.linkedin.com/company/servithen/">-Linkedin : Société SERVITHEN</a>
+        <textarea name="Telephone" class="footerp" id="Telephone"></textarea>
+        <textarea name="TelephoneURL" id="TelephoneURL"></textarea>
+        <textarea name="Mail" class="footerp" id="Mail"></textarea>
+        <textarea name="MailURL" id="MailURL"></textarea>
+        <textarea name="Linkedin" id="Linkedin"></textarea>
+        <textarea name="LinkedinURL" id="LinkedinURL"></textarea>
         <h4>Adresse siège :</h3>
-    
-        <a target="_blank" href="https://www.google.fr/maps/place/SERVITHEN/@48.8155515,1.9083403,20z/data=!4m13!1m7!3m6!1s0x47e69b2e4c101591:0x3c4b6015d2f3a5ea!2s8+Rue+Guillaume+de+Bois+Nivard,+78640+Neauphle-le-Ch%C3%A2teau!3b1!8m2!3d48.8155576!4d1.9084528!3m4!1s0x47e69b2e4914fd6f:0xefa5b210e1554b90!8m2!3d48.8155084!4d1.9085263">8 Rue Guillaume de Bois Nivard, 78640 Neauphle-le-Château</a>
+        <textarea name="Local" id="Local"></textarea>
+        <textarea name="LocalURL" id="LocalURL"></textarea>
         </div>
     </footer>
+    </form>
 </body>
-<script type="text/javascript" src="accueil.js"></script>
+<script type="text/javascript" src="modif accueil.js"></script>
 </html>
